# sementic-image-search-main

./: .env_copy  README.md  pyproject.toml
semantic_image_search/notebooks/: experiments.ipynb
